Added the Submit botton in the Form page

--- a/contactme.html
+++ b/contactme.html
@@ -16,7 +16,7 @@
         <label>Your message</label>
         <br> 
         <textarea rows="10" cols="30"></textarea>
-           
+        <input type="submit" value="GO!">
     </form>
 </body>
 </html>
