--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Document</title>
 </head>
-<body style="background-color: yellow;">
+<body style="background-color:E7B10A">
         
     
     <table cellspacing="40">
