Changed background style for whole doc

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
         <meta charset="UTF-8">
         <title>Document</title>
+        <style>
+            body{background-color: #E7B10A;}
+        </style>
 </head>
-<body style="background-color:#E7B10A;">
+<body>
         
     
     <table cellspacing="40">
