--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
         <meta charset="UTF-8">
         <title>Document</title>
         <style>
-            body{background-color: #E7B10A;}
+            body {
+                background-color: #E7B10A;
+            }
+            hr {
+                background-color: black;
+            }
         </style>
 </head>
 <body>
