--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
                 background-color: #E7B10A;
             }
             hr {
+                display: block;
+                margin-top: 0.5em;
+                margin-bottom: 0.5em;
+                margin-left: auto;
+                margin-right: auto;
+                border-style: inset;
+                border-width: 5px;
                 background-color: black;
             }
         </style>
