--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 margin-bottom: 0.5em;
                 margin-left: auto;
                 margin-right: auto;
-                border-style: none;
+                border-style: solid;
                 border-width: 5px;
                 background-color: black;
             }
