--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
                 margin-bottom: 0.5em;
                 margin-left: auto;
                 margin-right: auto;
-                border-style: solid;
-                border-width: 5px;
+                border-style: none;
+                height: 5px;
                 background-color: black;
             }
         </style>
